# email-sender

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
mailer/: admin.py  forms.py  models.py  urls.py  views.py
mailer/management/commands/: start_delivery.py
mailer/migrations/: 0001_initial.py  0002_initial.py  0003_recipient.py  0004_distribution_recipients_and_more.py  0005_report.py  0006_alter_distribution_recipients_and_more.py  0007_distribution_messages.py
templates/: base.html  home.html  signup.html
templates/mailer/: distribution_confirm_delete.html  distribution_detail.html  distribution_form.html  distribution_list.html  message_confirm_delete.html  message_detail.html  message_list.html  recipient_confirm_delete.html  recipient_list.html
templates/registration/: login.html
users/migrations/: 0001_initial.py
